--- a/package.json
+++ b/package.json
@@ -11,11 +11,19 @@
   "scripts": {
     "build": "webpack --mode production",
     "test": "jest",
-    "lint": "eslint src",
+    "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "eslint src --ext .js,.jsx,.ts,.tsx --fix",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,md}\"",
+    "release": "standard-version",
     "prepublishOnly": "npm run build",
     "publish": "npm publish --access public"
   },
-  "keywords": ["react", "focus", "accessibility", "focus management"],
+  "keywords": [
+    "react",
+    "focus",
+    "accessibility",
+    "focus management"
+  ],
   "repository": "https://github.com/mallikcheripally/react-refocus.git",
   "author": "Mallik Cheripally",
   "license": "MIT",
@@ -27,20 +35,26 @@
     "@babel/preset-typescript": "^7.13.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^7.13.1",
+    "@typescript-eslint/parser": "^7.13.1",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.4",
-    "eslint": "^7.26.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.23.2",
+    "eslint": "^9.5.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.3",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "globals": "^15.6.0",
     "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.6.0",
+    "prettier": "^3.3.2",
+    "standard-version": "^9.5.0",
     "terser-webpack-plugin": "^5.1.2",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.2",
     "webpack": "^5.36.2",
-    "webpack-cli": "^4.6.0",
-    "webpack-bundle-analyzer": "^4.4.0"
+    "webpack-bundle-analyzer": "^4.4.0",
+    "webpack-cli": "^4.6.0"
   },
   "peerDependencies": {
     "react": "^18.0.0",
