--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "A focus management library for React applications",
   "main": "lib/index.js",
-  "module": "es/index.js",
+  "module": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": [
     "lib/**/*"
@@ -27,17 +27,21 @@
   "repository": "https://github.com/mallikcheripally/react-refocus.git",
   "author": "Mallik Cheripally",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5"
+  },
   "devDependencies": {
     "@babel/core": "^7.14.0",
     "@babel/preset-env": "^7.14.0",
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^5.2.4",
     "eslint": "^9.5.0",
     "eslint-config-prettier": "^9.1.0",
@@ -48,10 +52,12 @@
     "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.6.0",
     "prettier": "^3.3.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "standard-version": "^9.5.0",
     "terser-webpack-plugin": "^5.1.2",
     "ts-loader": "^9.2.3",
-    "typescript": "^4.3.2",
+    "typescript": "^5.5.2",
     "webpack": "^5.36.2",
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.6.0"
