Update tsconfig.json with new paths and options
Added multiple paths and options in tsconfig.json to better organize and handle the project structure. With these adjustments, we are providing clearer module resolution and adding support for JSX with 'react-jsx' and '@emotion/react'.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,17 @@
     "isolatedModules": true,
     "declaration": true,
     "declarationDir": "./lib",
-    "outDir": "./lib"
+    "outDir": "./lib",
+    "jsx": "react-jsx",
+    "jsxImportSource": "@emotion/react",
+    "baseUrl": ".",
+    "paths": {
+      "components/*": ["src/components/*"],
+      "hooks/*": ["src/hooks/*"],
+      "utils/*": ["src/utils/*"],
+      "styles/*": ["src/styles/*"],
+      "context/*": ["src/context/*"]
+    }
   },
   "include": ["src"],
   "exclude": ["node_modules", "lib"]
