--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-refocus",
-  "version": "0.0.1-alpha.2",
+  "version": "0.0.1",
   "description": "A focus management library for React applications",
   "type": "module",
   "main": "dist/index.js",
