chore(package): add new keywords for better discoverability
Added several new keywords to the package.json to improve searchability and accessibility. This helps users find the package more easily based on related terms and functionalities.

--- a/package.json
+++ b/package.json
@@ -23,7 +23,13 @@
     "react",
     "focus",
     "accessibility",
-    "focus management"
+    "focus management",
+    "keyboard navigation",
+    "react focus hooks",
+    "react focus hooks",
+    "a11y",
+    "react accessibility",
+    "react focus"
   ],
   "repository": "https://github.com/mallikcheripally/react-refocus.git",
   "author": "Mallik Cheripally",
