--- a/package.json
+++ b/package.json
@@ -73,12 +73,13 @@
     "ts-jest": "^29.2.4",
     "ts-loader": "^9.2.3",
     "typescript": "^5.5.2",
-    "webpack": "^5.36.2",
+    "webpack": "5.94.0",
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.6.0"
   },
   "peerDependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
